top_bar_language_picker: make sure it's not too small
that would be better to let it auto-size, or at least wrap the text,
so that's just a temporary hack

"temporary" ^^

--- a/app/modules/general/scss/_top_bar_language_picker.scss
+++ b/app/modules/general/scss/_top_bar_language_picker.scss
@@ -1,9 +1,12 @@
 .language-picker{
   padding-left: 0.5em;
+  .dropdown{
+    min-width: 18em;
+  }
   .options{
     overflow-y: auto;
     overflow-x: hidden;
-    max-height: 50vh;
+    max-height: 60vh;
   }
   li.option{
     display: flex;
